# mcp-google-search-console

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Containerfile  README.md  SECURITY.md  gourmand-exceptions.toml  gourmand.toml  pyproject.toml  railway.toml  server.json
.gemini/: config.yaml  styleguide.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  container.yml  publish.yml  security.yml
.specify/memory/: constitution.md
.specify/specs/000-baseline/: spec.md
.specify/templates/: plan-template.md  spec-template.md
src/mcp_google_search_console_crunchtools/: __init__.py  __main__.py  client.py  config.py  errors.py  models.py  server.py
src/mcp_google_search_console_crunchtools/tools/: __init__.py  analytics.py  inspection.py  sitemaps.py  sites.py
tests/: conftest.py  test_tools.py  test_validation.py
